--- a/hpc/nways/nways_labs/nways_MD/English/Python/jupyter_notebook/cupy/cupy_guide.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/Python/jupyter_notebook/cupy/cupy_guide.ipynb
@@ -9,7 +9,14 @@
     "\n",
     "#  CuPy Lab 1\n",
     "---\n",
-    "Before we begin, let's execute the cell below to display information about the CUDA driver and GPUs running on the server by running the `nvidia-smi` command. To do this, execute the cell block below by giving it focus (clicking on it with your mouse), and hitting Ctrl-Enter, or pressing the play button in the toolbar above. If all goes well, you should see some output returned below the grey cell."
+    "\n",
+    "## Learning Objectives\n",
+    "- **The goal of this lab is to:**\n",
+    "     - enable you to quickly start using CuPy (beginner to intermediate level)\n",
+    "     - teach you to apply the concepts of GPU programming to HPC field(s); and\n",
+    "     - show you how to achieve a computational speedup on the GPU to maximize the throughput of your HPC implementation.\n",
+    "\n",
+    "Before we begin, let's execute the cell below to display information about the CUDA driver and GPUs running on the server by running the `nvidia-smi` command. To do this, execute the cell block below by clicking on it with your mouse, and pressing Ctrl-Enter, or pressing the play button in the toolbar above. You should see some output returned below the grey cell."
    ]
   },
   {
@@ -27,15 +34,8 @@
    "source": [
     "\n",
     "\n",
-    "### Learning Objectives\n",
-    "- **The goal of this lab is to:**\n",
-    "     - quickly get you started with CuPy from beginner to intermediate level\n",
-    "     - teach you application of GPU programming concept to HPC field(s)\n",
-    "     - show you how to maximize the throughput of your HPC implementation through computational speedup on the GPU.      \n",
-    "\n",
-    "\n",
     "##  What is CuPy?\n",
-    "- CuPy is an implementation of NumPy-compatible multi-dimensional array on CUDA\n",
+    "- CuPy is an implementation of NumPy-compatible multi-dimensional array on CUDA. It is an open-source array library for GPU-accelerated computing with Python.\n",
     "- CuPy consists of :\n",
     "    - cupy.ndarray \n",
     "    - the core multi-dimensional array class \n",
@@ -45,7 +45,10 @@
     "    - Data types (int32, float32, uint64, complex64,... )\n",
     "    - Array manipulation routine (reshape)\n",
     "    - Linear Algebra functions (dot, matmul, etc)\n",
-    "    - Reduction along axis (max, sum, argmax, etc)"
+    "    - Reduction along axis (max, sum, argmax, etc)\n",
+    "   \n",
+    "   \n",
+    "You can run the examples given in the cells below:"
    ]
   },
   {
@@ -122,14 +125,13 @@
     "    - Customizable memory allocator and memory pool\n",
     "    - cuDNN utilities\n",
     "- These features  are developed to support performance\n",
-    "- CuPy uses on-the-fly kernel synthesis: when a kernel call is required, it compiles a kernel code optimized for the shapes and dtypes of given arguments, sends it to the GPU device, and executes the kernel.\n",
+    "- CuPy uses on-the-fly kernel synthesis: when a kernel call is required, it compiles a kernel code optimized for the shapes and data type objects (dtypes) of given arguments, sends it to the GPU device, and execute the kernel.\n",
     "- CuPy also caches the kernel code sent to GPU device within the process, which reduces the kernel transfer time on further calls. \n",
     "\n",
     "\n",
-    "###  CuPy Architecture\n",
+    "##  CuPy Architecture\n",
     "\n",
-    "The CuPy Architecture expose functionalities within CuPy API that allows developers (or users) to create a User-defined CuDA Kernel, make use of DNN utility through the cuDNN functionality, solve Linear algebra through cuTENSOR, cuBLAS, cuSOLVER, and cuSPARSE api functions. Also, Random numbers can be generated using cuRAND. Sort, Scan and Reduction operations are conveniently executed through the use of CUB and Thrust, and lastly, Multi-GPU data transfer task are initiated through the use of NCCL functionality. It important to know that all the aformentioned api functionalities rely on CUDA, while the CUDA itself runs \n",
-    "on the NVIDIA GPU as shown in the diagram below. \n",
+    "The CuPy architecture exposes functionalities within the CuPy API that allows developers (or users) to create a user-defined CUDA kernel, make use of DNN utility through the cuDNN functionality, solve Linear algebra through cuTENSOR, cuBLAS, cuSOLVER, and cuSPARSE API functions. Also, random numbers can be generated using cuRAND. Sort, Scan and Reduction operations are conveniently executed using CUB and Thrust.  Furthermore, Multi-GPU data transfer tasks are initiated with NCCL functionality. It is important to know that all the API functionalities rely on CUDA, while the CUDA itself runs on the NVIDIA GPU as shown in the diagram below. \n",
     "\n",
     "<img src=\"../images/cupy_arch.png\">\n",
     "\n",
@@ -145,7 +147,7 @@
     "x = np.array([1, 2, 3, 4, 5])\n",
     "```\n",
     "\n",
-    "- CuPy considers the current device as the default device with device ID 0. It also allows temporary switch between GPU devices.\n",
+    "- CuPy considers the current device as the default device with device ID 0. It also allows temporary switches between GPU devices.\n",
     "\n",
     "```python\n",
     "import cupy as cp\n",
@@ -164,7 +166,7 @@
     "gpu0 = cp.array([1, 2, 3, 4, 5]) \n",
     "```\n",
     "\n",
-    "### Data transfer\n",
+    "## Data Transfer\n",
     "- Arrays can be moved from Host to Device (CPU -> GPU) using **cupy.asarray**"
    ]
   },
@@ -216,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- In order to transfer an array between devices(GPU to GPU), **cupy.ndarray** is used."
+    "- In order to transfer an array between devices(GPU to GPU), use **cupy.ndarray**."
    ]
   },
   {
@@ -249,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### GPU  & CPU agnostic code\n",
+    "## GPU  and CPU Agnostic Code\n",
     "- The compatibility of CuPy with NumPy enables the implementation of CPU/GPU generic code using **cupy.get_array_module()**"
    ]
   },
@@ -290,7 +292,7 @@
    "source": [
     "##  CUDA Kernels\n",
     "\n",
-    "- **CUDA Kernels can be define in Cupy as follows:**\n",
+    "- **CUDA kernels can be defined in CuPy as follows:**\n",
     "\n",
     "    - Elementwise Kernels\n",
     "    - Reduction Kernels\n",
@@ -299,13 +301,13 @@
     "- These kernels are user-defined based.\n",
     "\n",
     "### Elementwise Kernels\n",
-    "- The ElementwiseKernel class is used to define this type of kernel.\n",
-    "- This kernel consists of four parts which includes:\n",
-    "    1. a list of input argument \n",
-    "    2. a list of output argument\n",
+    "- The **ElementwiseKernel** class is used to define this type of kernel.\n",
+    "- This kernel consists of four parts:\n",
+    "    1. an input argument list \n",
+    "    2. an output argument list\n",
     "    3. a loop body code\n",
     "    4. kernel name\n",
-    "- Variable name starting with underscore “_” , “n”, and “i” are regarded as reserved keywords.\n",
+    "- Variable names starting with “n”, “i”, or with underscore “_” are regarded as reserved keywords.\n",
     "\n",
     "#### Example: z = x*w + b"
    ]
@@ -346,7 +348,7 @@
    "metadata": {},
    "source": [
     "### Elementwise Kernel: Generic-type kernels\n",
-    "- It can be used to define a generic-type kernels. It treats a type specifier of one character as a type placeholder."
+    "- The Generic-type kernel treats a type-specifier of one character as a type-placeholder. In the sample code given in the cell below, the character **T** represents a type-placeholder."
    ]
   },
   {
@@ -384,15 +386,14 @@
    "source": [
     "### Reduction Kernels\n",
     "\n",
-    "- Reduction kernel is implemented through the ReductionKernel class. \n",
-    "- In order to implement this kernel class, the following parts must be defined:\n",
+    "- Reduction kernel is implemented through the ReductionKernel classand contains: \n",
     "    - **Identity value**: to initialize reduction value.\n",
-    "    - **Mapping expression**: Used for the pre-processing of each element to be reduced.\n",
-    "    - **Reduction expression**: It is an operator to reduce the multiple mapped values. The special variables **a** and **b** are used for its operands.\n",
-    "    - **Post mapping expression**: It is used to transform the resulting reduced values. The special variable a is used as its input. Output should be written to the output parameter.\n",
+    "    - **Mapping expression**: used for the pre-processing of each element to be reduced.\n",
+    "    - **Reduction expression**: an operator to reduce the multiple mapped values. The special variables \"**a**\" and \"**b**\" are used for its operands.\n",
+    "    - **Post mapping expression**: It is used to transform the resulting reduced values. The special variable \"**a**\" is used as its input. Output should be written to the output parameter.\n",
     "\n",
     "\n",
-    "**Example:  𝑧=∑_(𝑖=1)𝑥_𝑖 *𝑤_𝑖+𝑏**"
+    "Run the following example in the cell below: <b>𝑧 = $∑_{𝑖=1}$ $𝑥_{𝑖}$ * $𝑤_{𝑖}$ + 𝑏 </b>"
    ]
   },
   {
@@ -425,13 +426,30 @@
    "source": [
     "## Raw Kernels\n",
     "\n",
-    "- Raw kernels enables  the  direct use of kernels from CUDA source, and it is defined through the RawKernel class.\n",
-    "- The RawKernel object allows you to call the kernel with CUDA’s cuLaunchKernel interface. In other words, you have control over:\n",
+    "- Raw kernels enable the direct use of kernels from CUDA source, and is defined through the RawKernel class.\n",
+    "- The RawKernel object allows you to call the kernel with CUDA’s cuLaunchKernel interface giving you control over:\n",
     "    - grid size\n",
     "    - block size\n",
     "    - shared memory size \n",
-    "    - and stream. \n",
-    "<img src=\"../images/cupy_kernel_memory.png\">"
+    "    - stream. \n",
+    "<img src=\"../images/cupy_kernel_memory.png\">\n",
+    "\n",
+    "\n",
+    "The code shown below is an example of Raw Kernel. The Python code embeds a CUDA C kernel (add_func) that adds two arrays together. The statement **int tid = blockDim.x * blockIdx.x + threadIdx.x** estimates the unique ID for each threads, thus, enables the access to memory grid, blocks and threads.\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "import cupy as cp\n",
+    "add_kernel = cp.RawKernel(r'''\n",
+    "extern \"C\" __global__\n",
+    "void add_func(const float* x1, const float* x2, float* y) {\n",
+    "int tid = blockDim.x * blockIdx.x + threadIdx.x;\n",
+    "y[tid] = x1[tid] + x2[tid];\n",
+    "}\n",
+    "''', 'add_func')\n",
+    "```\n",
+    "\n",
+    "Run the example in the cell below."
    ]
   },
   {
@@ -479,7 +497,7 @@
    "source": [
     "<img src=\"../images/raw_kernel.png\">\n",
     "\n",
-    "#### Raw Kernels : Complex-value arrays"
+    "**An example of complex-value array addition using Raw Kernels is presented in the cell below**"
    ]
   },
   {
@@ -499,11 +517,14 @@
     "}\n",
     "''', 'my_func')\n",
     "\n",
+    "# generating input x1 and x2, while y stores the output\n",
     "x1 = cp.arange(25, dtype=cp.complex64).reshape(5,5)\n",
     "x2 = 1j*cp.arange(25, dtype=cp.complex64).reshape(5,5)\n",
     "y = cp.zeros((5,5), dtype=cp.complex64)\n",
     "\n",
+    "# calling the kernel\n",
     "complex_kernel((1,),(25,),(x1, x2,y,cp.float32(2.0)))\n",
+    "\n",
     "print(y)\n",
     "\n",
     "#output:\n",
@@ -545,8 +566,8 @@
    "source": [
     "### Raw Modules \n",
     "\n",
-    "- The **RawModule** class is used to defining a large raw CUDA C source or loading an existing CUDA binary.\n",
-    "- It is initialized by a CUDA C source code having a several kernels (functions) such that needed kernels are retrieved by calling the **get_function()** method.\n",
+    "- The **RawModule** class is used to define a large raw CUDA C source or to load an existing CUDA binary.\n",
+    "- It is initialized by a CUDA C source code having several kernels (functions) such that needed kernels are retrieved by calling the **get_function()** method. A sample Raw Module construct written below consists of two kernels, **test_sum** (adds to arrays) and **test_multiply** (multiplication of two arrays). \n",
     "\n",
     "```python\n",
     "import cupy as cp\n",
@@ -570,7 +591,7 @@
     " }\n",
     "}'''\n",
     "```\n",
-    "##### Example:"
+    "**The sample code in the cells below are implementations of Raw Module Kernel. Run the cells and see the outputs.**"
    ]
   },
   {
@@ -596,11 +617,14 @@
     " }\n",
     "}'''\n",
     "\n",
+    "# loading module\n",
     "module = cp.RawModule(code = load_raw_module)\n",
     "\n",
+    "# accessing kernels within the Raw module\n",
     "ker_sum = module.get_function('sum_ker')\n",
     "ker_times = module.get_function('multiply_ker')\n",
     "\n",
+    "# initializing array a, b, and c. c is the array that stores the output values\n",
     "a = cp.arange(25, dtype=cp.float32).reshape(5,5)\n",
     "b = cp.ones((5,5), dtype=cp.float32)\n",
     "c = cp.zeros((5,5), dtype=cp.float32)"
@@ -613,6 +637,8 @@
    "outputs": [],
    "source": [
     "# run the above cell before runing this cell\n",
+    "\n",
+    "#calling kernel ker_sum\n",
     "ker_sum((1,),(25,), (a,b,c))\n",
     "print(c)\n",
     "\n",
@@ -630,6 +656,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#calling kernel ker_times\n",
     "ker_times((5,),(5,),(a,b,c))\n",
     "print(c)\n"
    ]
@@ -640,7 +667,16 @@
    "source": [
     "### Kernel Fusion\n",
     "\n",
-    "- Kernel fusion is a decorator that fuses functions. It can be used to define an elementwise or reduction kernels easily.\n"
+    "- Kernel fusion is a decorator that fuses functions. It can be used to define an elementwise or reduction kernels easily. This decorator is specified at the top of a function as: \n",
+    "\n",
+    "```python\n",
+    "@cp.fuse(kernel_name='<target function name>') \n",
+    "```\n",
+    "or as\n",
+    "```python\n",
+    " @cp.fuse()\n",
+    "```\n",
+    "An example that computes **z = x * w + bias** is presented in the below cell."
    ]
   },
   {
@@ -654,7 +690,8 @@
     "@cp.fuse(kernel_name='dnnlayerNode')\n",
     "def dnnlayerNode(x, w, bias):\n",
     "    return  (x * w) + bias\n",
-    "    \n",
+    "\n",
+    "# input parameters\n",
     "x = cp.arange(9, dtype=cp.float32).reshape(3,3)\n",
     "w = cp.arange(9, dtype=cp.float32).reshape(3,3)\n",
     "bias = cp.array([-0.5], dtype=cp.float32)\n",
@@ -683,7 +720,7 @@
     "---\n",
     "## Lab Task\n",
     "\n",
-    "In this section, you are expected to click on the **Serial code Lab Assignment** link and proceed to Lab 2. In this lab you will find three python serial code functions. You are required to revise the **pair_gpu** function and make it run on the GPU, and likewise do a few modifications on the **main** function.\n",
+    "In this section, you are expected to click on the **Serial Code Lab Assignment** link and proceed to Lab 2. In this lab, you will find three python serial code functions. You are required to revise the **pair_gpu** function to run on the GPU, and likewise do a few modifications within the **main** function.\n",
     "\n",
     "## <div style=\"text-align:center; color:#FF0000; border:3px solid red;height:80px;\"> <b><br/> [Serial Code Lab Assignment](serial_RDF.ipynb) </b> </div>\n",
     "\n",
@@ -693,7 +730,7 @@
     "\n",
     "## Post-Lab Summary\n",
     "\n",
-    "If you would like to download this lab for later viewing, it is recommend you go to your browsers File menu (not the Jupyter notebook file menu) and save the complete web page.  This will ensure the images are copied down as well. You can also execute the following cell block to create a zip-file of the files you've been working on, and download it with the link below."
+    "If you would like to download this lab for later viewing, we recommend you go to your browser's File menu (not the Jupyter notebook file menu) and save the complete web page. This will ensure the images are copied as well. You can also execute the following cell block to create a zip-file of the files you've been working on and download it with the link below."
    ]
   },
   {
@@ -727,7 +764,7 @@
     "\n",
     "[NVIDIA Nsight System](https://docs.nvidia.com/nsight-systems/)\n",
     "\n",
-    "[CUDA Toolkit Download](https://developer.nvidia.com/cuda-downloads)\n",
+    "[NVIDIA CUDA Toolkit](https://developer.nvidia.com/cuda-downloads)\n",
     "\n",
     "**NOTE**: To be able to see the Nsight System profiler output, please download Nsight System latest version from [here](https://developer.nvidia.com/nsight-systems).\n",
     "\n",
@@ -749,7 +786,7 @@
     "\n",
     "## Licensing \n",
     "\n",
-    "This material is released by NVIDIA Corporation under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
+    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
    ]
   }
  ],
