--- a/hpc/nways/nways_labs/nways_MD/English/nways_MD_start_python.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/nways_MD_start_python.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## N Ways to GPU Programming - MD\n",
+    "## N Ways to GPU Programming - Molecular Dynamics(MD)\n",
     "\n",
-    "## Learning objectives\n",
-    "With the release of CUDA in 2007, different approaches to programming GPUs have evolved. Each approach has its own advantages and disadvantages. By the end of this bootcamp session, students will have a broader perspective on GPU programming approaches to help them select a programming model that better fits their applications' needs and constraints. The bootcamp will teach how to accelerate a popular algorithm of Radial Distribution Function (RDF) using the following methods:\n",
+    "## Learning Objectives\n",
+    "With the release of NVIDIA CUDA in 2007, different approaches to GPU programming have evolved. Each approach has its own advantages and disadvantages. By the end of this bootcamp session, participants will have a broader perspective on GPU programming approaches to help them select a programming model that better fits their application's needs and constraints. The bootcamp will teach how to accelerate a popular algorithm of Radial Distribution Function (RDF) using the following methods:\n",
     "\n",
-    "* Programming Language Extension: Cupy and Numba\n",
+    "* Programming Language Extension: CuPy and Numba\n",
     "\n",
-    "Let's start with testing the CUDA Driver and GPU you are running the code on in this lab:"
+    "Let's start by testing the CUDA Driver and GPU to be used in running the code in this lab:"
    ]
   },
   {
@@ -30,15 +30,15 @@
     "<!--**IMPORTANT**: Before we start please download the input file needed for this application from the [Google drive](https://drive.google.com/drive/folders/1aQ_MFyrjBIDMhCczse0S2GQ36MlR6Q_s?usp=sharing) and upload it to the input folder. From the top menu, click on *File*, and *Open* and navigate to `C/source_code/input` or `Python/source_code/input` directory and copy paste the downloaded input file (`alk.traj.dcd`).-->\n",
     "\n",
     "\n",
-    "### Tutorial Outline\n",
+    "### Bootcamp Outline\n",
     "\n",
-    " We will be following the cycle of Analysis - Parallelization - Optimization cycle throughout. To start with let us understand the Nsight tool ecosystem:   \n",
+    " Throughout the tutorial we will be following the Analysis - Parallelization - Optimization cycle. Let us begin by understanding the NVIDIA Nsight System tool ecosystem:   \n",
     "\n",
     "- [Introduction to Profiling](../../profiler/English/jupyter_notebook/profiling.ipynb)\n",
     "    - Overview of Nsight profiler tools\n",
-    "    - Introduction to Nsight Systems\n",
-    "    - How to use NVTX APIs\n",
-    "    - Introduction to Nsight Compute\n",
+    "    - Introduction to NVIDIA Nsight Systems\n",
+    "    - How to use NVIDIA Tools Extension SDK (NVTX) \n",
+    "    - Introduction to NVIDIA Nsight Compute\n",
     "    - Optimization Steps to parallel programming \n",
     "    \n",
     "We will be working on porting a radial distribution function (RDF) to GPUs. Please choose one approach within the Python programming language to proceed working on RDF. \n",
@@ -48,7 +48,7 @@
     "\n",
     "Please read the [RDF Overview](Python/jupyter_notebook/serial/rdf_overview.ipynb) to get familiar with how this application works.\n",
     "\n",
-    "To get started, click on the following GPU programming approaches in python:\n",
+    "To get started, click on the following GPU programming approaches in Python:\n",
     "\n",
     "1. [CuPy](./Python/jupyter_notebook/cupy/cupy_guide.ipynb)\n",
     "2. [Numba](./Python/jupyter_notebook/numba/numba_guide.ipynb)\n",
@@ -63,13 +63,13 @@
     "\n",
     "\n",
     "### Tutorial Duration\n",
-    "The lab material will be presented in a 8hr session. Link to material is available for download at the end of the lab.\n",
+    "The lab material will be presented in an 8-hour session. A Link to the material is available for download at the end of the lab.\n",
     "\n",
     "### Content Level\n",
     "Beginner, Intermediate\n",
     "\n",
     "### Target Audience and Prerequisites\n",
-    "The target audience for this lab is researchers/graduate students and developers who are interested in learning about programming various ways to programming GPUs to accelerate their scientific applications.\n",
+    "The target audience for this lab are researchers, graduate students and developers who are interested in learning about various ways of GPU programming to accelerate scientific applications.\n",
     "\n",
     "Basic experience with Python programming is needed. No GPU programming knowledge is required.\n",
     "\n",
@@ -81,7 +81,7 @@
     "\n",
     "## Licensing \n",
     "\n",
-    "This material is released by NVIDIA Corporation under the Creative Commons Attribution 4.0 International (CC BY 4.0). "
+    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). "
    ]
   }
  ],
