Simplified p2pBandwidthLatencyTest, removed Dockerfile, updated README

--- a/hpc/multi_gpu_nways/labs/CFD/English/introduction.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/introduction.ipynb
@@ -35,7 +35,7 @@
     "We will take up the Jacobi Solver, an iterative technique for solving system of linear equations, in this tutorial. To begin, click on the first link below:\n",
     "\n",
     "1. [Overview of single-GPU code and Nsight Systems Profiler](C/jupyter_notebook/single_gpu/single_gpu_overview.ipynb)\n",
-    "2. Single Node :Multi-GPU:\n",
+    "2. Single Node Multi-GPU:\n",
     "    * [CUDA Memcpy and Peer-to-Peer Memory Access](C/jupyter_notebook/cuda/memcpy.ipynb)\n",
     "    * [Intra-node topology](C/jupyter_notebook/advanced_concepts/single_node_topology.ipynb)\n",
     "    * [CUDA Streams and Events](C/jupyter_notebook/cuda/streams.ipynb)\n",
